# onnx-loader

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  allocator.cpp  main.art  mat.art  network.art  network.py  read.art  read.cpp  sequential.art  utils.art
cmake/: anydsl-macros.cmake  onnx-package.cmake
lib/: ConstantTensor.py  network.py
mat_ops/: addition.art  avg_pool.art  concat.art  convolution.art  crossentropy.art  dropout.art  flatten.art  gemm.art  lrn.art  max_pool.art  multiply.art  nllloss.art  relu.art  reshape.art  softmax.art  transpose.art
plugin/: CMakeLists.txt  load.cpp  load_plugin.cpp  load_runtime.cpp  memory.cpp  plugin_interface.art
pythorin/: irbuilder.py  thorin.py  type_table.py
src/: mat.art  sequential.art
src/mat_ops/: addition.art  convolution.art  dropout.art  flatten.art  gemm.art  im2col.art  multiply.art  relu.art  reshape.art  softmax.art  transpose.art  untested_crossentropy.art
src/mat_ops/untested/: avg_pool.art  concat.art  crossentropy.art  dropout.art  flatten.art  gemm.art  lrn.art  max_pool.art  nllloss.art  relu.art  softmax.art  transpose.art
src/utils/: config.h.in  convert.art  loop.art  read.art  read.cpp  utils.art  wmma.art
testing/: CMakeLists.txt
testing/addition/: CMakeLists.txt  result.idx  test.art  test.idx  test.py
testing/convolution/: CMakeLists.txt  generate_data.py  test.art
testing/convolution-gemm/: CMakeLists.txt  generate_data.py  test.art  test.py
testing/convolution-im2col/: CMakeLists.txt  generate_model.py  test.art  test.py
testing/convolution-onnx/: generate_model.py  test.art  test.py
testing/extract_onnx_initializers/: CMakeLists.txt  generate_model.py  main.art  network.py
testing/gemm/: CMakeLists.txt  generate_data.py  test.art  test.py
testing/gemm-256/: CMakeLists.txt  test.art  test.py
testing/gemm-nvvm/: CMakeLists.txt  generate_data.py  test.art  test.py
testing/im2col/: CMakeLists.txt  generate_data.py  test.art  test.idx  test.py
testing/im2col3d/: CMakeLists.txt  test.art  test.py
testing/im2col3d-large/: CMakeLists.txt  generate_data.py  test.art  test.py
testing/import_idx/: CMakeLists.txt  generate_data.py  main.art
testing/multiply/: CMakeLists.txt  generate_data.py  test.art  test.py
testing/relu/: CMakeLists.txt  generate_data.py  test.art  test.py
testing/reshape/: CMakeLists.txt  test.art  test.py
testing/reshape_onnx/: CMakeLists.txt  generate_data.py  generate_model.py  test.art  test.py
testing/reshape_tensor/: CMakeLists.txt  test.art  test.py
testing/super-resolution/: CMakeLists.txt  generate_data.py  test.art  test.py
utils/: read.art  read.cpp  utils.art
