add_subdirectory(addition)
add_subdirectory(convolution)
add_subdirectory(reshape)
add_subdirectory(reshape_tensor)
add_subdirectory(reshape_onnx)
add_subdirectory(import_idx)
add_subdirectory(extract_onnx_initializers)
add_subdirectory(multiply)
add_subdirectory(gemm)
add_subdirectory(gemm-256)
add_subdirectory(im2col)
